# shadowsocks-crypto

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/shadowsocks-crypto/: comm.h  shadowsocks-crypto.h
include/tls-flat/: tls-flat.h
program/: CMakeLists.txt  client.c  server.c  test-dns-cache.c  test-dns-server.c  test-server.c
src/: CMakeLists.txt  callback.c  handler.c  internal.h  launch.c  list.c  server.c  util.c
src/comm/: comm.h  list.c  list.h
src/netio/: client.c  dgramsc.c  dgramsc.h  dns_cache.c  dns_cache.h  dns_srv.c  dnsc.c  dnsc.h  dnssrv.c  flow.c  handler.c  internal.h  s5.c  s5.h  server.c  srv_dgram.c  srv_dns.c  srv_tcp.c  util.c
src/netio/udns/: config.h  dnsget.c  ex-rdns.c  parsedns.c  parsedns.h  rblcheck.c  udns_XtoX.c  udns_rr_a.c
src/shadowsocks-netio/: hdr.h  shadowsocks-netio.h
src/tls-flat/: crt_pool.c  handler.c  internal.h  root.c  tls.c  tls_handshake.c  tls_recv.c  tls_send.c  tls_transmit.c  tlsflat.c  util.c
