CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(shadowsocks-crypto C)

SET(CMAKE_C_STANDARD 99)

# MBEDTLS DIR
IF( DEFINED MBEDTLS_DIR )
    MESSAGE(STATUS "EXISTING MBEDTLS DIR: " ${MBEDTLS_DIR})
ELSE()
    SET(MBEDTLS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls)

    # Disable programs && testing in MBEDTLS
    SET(ENABLE_PROGRAMS 0)
    SET(ENABLE_TESTING 0)
    # ADD MBEDTLS PROJECT
    ADD_SUBDIRECTORY(${MBEDTLS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/mbedtls)
ENDIF()

# LIBUV DIR
IF( DEFINED LIBUV_DIR )
    MESSAGE(STATUS "EXISTING LIBUV DIR: " ${LIBUV_DIR})
ELSE()
    SET(LIBUV_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libuv)
    # ADD LIBUV PROJECT
    ADD_SUBDIRECTORY(${LIBUV_DIR} ${CMAKE_CURRENT_BINARY_DIR}/libuv)
ENDIF()

SET(SHADOWSOCKSCRYPTO_ADDTION_HDR
        ${MBEDTLS_DIR}/include
        ${LIBUV_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        )

INCLUDE_DIRECTORIES(${SHADOWSOCKSCRYPTO_ADDTION_HDR})

IF( ENABLE_PROGRAMS )
    # ADD PROGRAM DIR
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/program ${CMAKE_CURRENT_BINARY_DIR}/program)
ENDIF()

SET(SHADOWSOCKSNETIO_SRC
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/server.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/client.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/util.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/flow.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/list.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/dgramsc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/dnsc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/s5.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/netio/handler.c
        )

SET(SHADOWSOCKSCRYPTO_SRC
        ${CMAKE_CURRENT_SOURCE_DIR}/src/launch.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/util.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/callback.c

        ${SHADOWSOCKSNETIO_SRC}
        )

IF( ENABLE_SHAREDLIB )
    ADD_LIBRARY(shadowsocks-crypto SHARED ${SHADOWSOCKSCRYPTO_SRC})
ELSE()
    ADD_LIBRARY(shadowsocks-crypto STATIC ${SHADOWSOCKSCRYPTO_SRC})
ENDIF()
TARGET_LINK_LIBRARIES(shadowsocks-crypto mbedtls)
TARGET_LINK_LIBRARIES(shadowsocks-crypto uv_a)
